--- a/src/scss/components/_implemReady-section.scss
+++ b/src/scss/components/_implemReady-section.scss
@@ -1,4 +1,14 @@
 .implemReady-section {
+  .main-container {
+    @media (max-width: 1024px) and (min-width: 768px) {
+      padding: 0 40px;
+    }
+
+    @media (max-width: 767px) {
+      padding: 0 20px;
+    }
+  }
+
   h1 {
     margin: 0;
     margin-bottom: 16px;
